app/assets/stylesheets/app/dashboard.scss
.header {
  background-color: $primary;
  height: 48px;
  width: 100%;
}

.title {
  height: 34px;
}

.title__h1 {
  color: $white;
  font-family: $roboto-condensed;
  font-size: 24px;
  font-weight: 300;
  line-height: 45px;
  text-align: center;
  margin-top: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.info {
  height: 44px;
  width: $max-width - (176px * 2);
  margin: 0 auto;
  margin-top: 40px;
}

.info__description {
  color: $primary;
  font-family: $main-font;
  font-size: 14px;
  line-height: 22px;
  font-weight: 300;
  text-align: center;
}

.content-dashboard {
  margin: 0 auto;
  margin-top: 56px;
}

.matrix-dashboard {
  width: fit-content;
  margin: 0 auto;
  border-spacing: 0;
  border-collapse: collapse;
  margin-top: 40px;
}

.matrix__head {
  height: 68px;
  background-color: $secondary;
}

.matrix__user {
  background-color: $secondary;
  height: 68px;
  width: 68px;
  padding: 0;
}

.matrix__user-img {
  max-height: 48px;
  max-width: 48px;
  border-radius: 50%;
  border: 1px solid $secondary-border;
}

.matrix__picture {
  padding: 9;
  text-align: center;
}

.matrix__pullrequest {
  height: 67px;
  width: 67px;
  border: .5px solid $primary-border;
  background-color: $white;
  padding: 0;
  margin: 0;
  text-align: center;
  vertical-align: middle;
}

.matrix__pullrequest-border {
  border-radius: 8px 0 0;
}

.matrix__pullrequest__number,
.matrix__pullrequest__number-diagonal,
.matrix__pullrequest__number-0 {
  height: 36px;
  width: 32px;
  color: $black;
  font-family: $roboto-condensed;
  font-size: 32px;
  font-weight: 300;
  line-height: 36px;
  text-align: center;
  margin-top: 18px;
}

.matrix__pullrequest__number-diagonal {
  color: $orange;
}

.matrix__pullrequest__number-0 {
  color: $gray;
}

.stuck {
  position: fixed;
}

.organization__setting__button {
  width: 100%;
  text-align: center;
}

.organization__selector {
  margin-top: 30px;
  font-family: $roboto-condensed;
  width: 100%;
  text-align: center;
}

.content__dashboard {
  text-align: center;
  font-family: $main-font;
}

